--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@emotion/cache": "^11.13.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@mui/material": "^6.1.1",
+    "@mui/icons-material": "^6.1.3",
+    "@mui/material": "^6.1.3",
     "@mui/material-nextjs": "^6.1.1",
-    "next": "14.2.13",
+    "next": "^14.2.13",
     "react": "^18",
     "react-dom": "^18"
   },
